--- a/src/components/GameBoard/GameBoard.css
+++ b/src/components/GameBoard/GameBoard.css
@@ -1,11 +1,33 @@
 .container {
-  width: 50%;
+  /* width: 50%; */
   display: flex;
-  /* justify-content: space-between; */
+  flex-direction: column;
+  /* justify-content: space-between;  */
 }
 
 .cube {
-  width: 50px;
-  height: 50px;
-  border: 1px solid #000;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.column {
+  display: flex;
+}
+
+.gray {
+  background-color: #cdcdcd;
+}
+
+.white {
+  background-color: #fff;
+}
+
+.circle {
+  background-color: #f00;
+  width: 70px;
+  height: 70px;
+  border-radius: 9999px;
 }
