fixes bug with obstacle spawning, adds score meter

--- a/src/components/GameBoard/GameBoard.css
+++ b/src/components/GameBoard/GameBoard.css
@@ -50,12 +50,15 @@
   animation: blinker 2s linear infinite;
 }
 
+.green {
+  background-color: rgb(106, 192, 106);
+  cursor: pointer;
+
+  animation: blinker 2s linear infinite;
+}
+
 @keyframes blinker {
   50% {
     opacity: 0.25;
   }
-}
-
-.green {
-  background-color: rgb(106, 192, 106);
 }
