--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
 .container {
   width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.gameover-area {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.gameover-tint {
+  opacity: 0.5;
 }
 
 .score-area {
